tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__SuperFuelAndBoil-AAAAAAAAAAAAAAAAAAAMQA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3136,
  "prerequisites": [
    3134,
    3135
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you've gotten this far, you should be ready to produce Steam at an alarming rate from this hyper-efficient fuel. Unlike Combustion Generators and Gas Turbines, you will need more multis in front of your Large Boiler because it outputs Superheated Steam. More specifically, you will need two turbines: one for turning the Superheated Steam into EU and regular Steam, and another for turning the regular Steam into EU and water, to be reused in the boiler.\n\nThe multis will not run without a turbine inside the controller. The size and material of a turbine determines the optimal flow rate and the EU/t at that rate. Good materials in EV are Shadow Metal (from Thaumcraft) and Manyullyn, before upgrading to Oriharukon in IV. Steam turbines usually generate less EU/t than gas turbines but that depends on the amount and tier of the boilers, and whether you are using loose mode or not(check the Steam Turbine quest for more details).\n\nSteam flow rates are very high which means you will need huge GT pipes to keep up, but there is a better way: AE2 P2P tunnels, set to fluid mode, can teleport fluids from one multi to the next without caring for high flow rates. With all that taken care of, the only thing left to do is place an EV Buffered Dynamo Hatch on each turbine. Now your setup is complete!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Super Fuel And Boiling",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3134,
    3135
  ],
  "rewards": [],
  "tasks": []
}
