tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__TheMostPowerfulB-AAAAAAAAAAAAAAAAAAAMIw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3107,
  "optional_prerequisites": [
    160,
    3102
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "If you've been working with renewable diesels before, you might want to upgrade them further. Instead of just duplicating your existing setup, you can upgrade Biodiesel to Cetane-Boosted Diesel (CBD), with a specific additive called Tetranitromethane (TNM). You'll get more bang for your buck if you upgrade to this fuel, instead of just making more Biodiesel, since it has 3x more EU per bucket, and the TNM is needed in small quantities. Before you start working on the new setup, though, it's important that you increase the amount of Seed/Fish Oil you're making, and in turn the items that turn into those oils.\n\nAs before, you can use IC2 crops, regular crops/trees or fishing. For IC2 crops, you can use the Multifarm set to IC2 crop mode, which needs HV-gated Uranium Electron Tubes but automated more than 1000 crops while being very conservative with power and fertilizer, or the HV Crop Manager. For normal crops/trees, use the EnderIO Farming Station, also unlocked in HV. For fishing, you don't have new tools, you can only add more Fish Catchers or use Goldfish IC2 crops if you're oriented that way.\n\nTo complete this quest, make a Multifarm, a Farming Station or some Fish Catchers.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "The Most Powerful Biodiesel ",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
