tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__TitaniumChemical-AAAAAAAAAAAAAAAAAAAMPA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3132,
  "prerequisites": [
    3127
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This is the difficult part in the whole process. The multi in which Nitrobenzene is crafted is the Exxonmobil Chemical Plant, also known as the Chemplant, and it is a gigantic 7x7x7 structure with 4 separate upgradable parts to it. Even worse, the outer structure uses multiblock Machine Casings, making the DT look cheap by comparison, and the inside needs a lot of the casings used to craft single blocks.\n\nThe difference between them is that the tier of the outer structure that you need is mentioned in the recipe you want to craft, and the tier of the inner structure is generally related to the EU/t of the recipe, minus one tier. This is because, like the EBF and the LCR, you can use 2 energy hatches, so this HV recipe can be made with MV energy hatches. Since the inner structure's tier decides the max tier of the hatches used in the Chemplant, you can make it out of MV machine casings, which use Aluminium.\n\nThe outer structure will still need many stacks of Titanium, so this is where most of your effort will go. Good luck.\n\n[note]Technically, you could also make Nitrobenzene in an LCR instead of a Chemplant. But it is less energy efficient and dilutes your acid. That option was only added for those too weak to handle a Chemplant.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Titanium Chemical Plant",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3127
  ],
  "rewards": [],
  "tasks": []
}
