tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__ToluenesPower-AAAAAAAAAAAAAAAAAAAMKQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3113,
  "prerequisites": [
    3110
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Trinitrotoluene. Shorthand, that's TNT, or one of the most popular types of explosive there is. Not only is it popular, but it's a centerpiece of a special type of GTNH crafting: implosion compressing! There are other types of explosives available, but TNT is the best for this purpose.\n\nThat's all fine and dandy, but unfortunately it is not optional. To get past HV, you will need Titanium, and the most reasonable way to accomplish that is to get it from ores found in the Moon, which will need a rocket made of very compressed plates, courtesy of a few stacks of said TNT. To source it, you will need a lot of Toluene, and from there you can make a choice: make regular TNT, or add Nitric Acid to the mix and come out with Industrial TNT, a more powerful version that can, for the most part, craft more items than the cheaper TNT. Some of the renewable powergen processes can output Ammonia, which makes Nitric Acid much easier to produce, so keep that in mind.\n\nToluene, plus TNT or iTNT is what you need. The rocket will thank you later.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Toluene's Power",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3110
  ],
  "rewards": [],
  "tasks": []
}
