tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BiofortheMasses-AAAAAAAAAAAAAAAAAAAAFQ==__WoodTar-AAAAAAAAAAAAAAAAAAAMIg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3106,
  "optional_prerequisites": [
    3104,
    3103
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Benzene cannot be extracted directly from Charcoal. To get to it, you need to process the extracted fluid, called Wood Tar. In the past, this was a very slow step, which forced players to spam Fluid Extractors to keep up with the other parts of their Benzene line, but it's a lot faster now. Regardless, you still need more than one Fluid Extractor for each machine used in the step after this one, if you are using LV machines here.\n\nSince it's an LV recipe, you can overclock it with an MV machine, but you'll waste some EU that way (each recipe will cost twice as much EU). To continue, craft either 2 LV Fluid Extractors or 1 MV one.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wood Tar",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
